And update the quality section

--- a/quality.tex
+++ b/quality.tex
@@ -1,9 +1,13 @@
 \section{Quality and Efficiency of the Implementation}
+\note{\textbf{Quality and efficiency of the implementation – aspects to be taken into account}
+\begin{compactitem}
+  \item Quality and effectiveness of the work plan, assessment of risks and appropriateness of the effort assigned to work packages.
+  \item Quality, capacity and role of each participant, including hosting arrangements and extent to which the consortium as a whole brings together the necessary expertise.
+\end{compactitem}}
 
 \subsection{Quality and effectiveness of the work plan, assessment of risks and appropriateness of the effort assigned to work packages}
-\note{including appropriateness of the allocation of tasks and resources (including awarding of the doctoral degrees for EID and EJD)}
 
-\subsubsection{Work Packages description}
+\subsubsection{Work Packages (WP) list}
 \note{please include table 3.1a}
 
 \msccaption{Table 3.1a: Work Package (WP) List}
@@ -14,10 +18,10 @@
     \textbf{WP No.} &
     \textbf{WP Title} &
     \textbf{Lead Beneficiary No.} &
+    \textbf{Lead Beneficiary Short Name} &
     \textbf{Start Month} &
     \textbf{End Month} &
     \textbf{Activity Type} &
-    \textbf{Lead Beneficiary Short Name} &
     \textbf{Researcher Involvement} \\
     \hline
     &&&&&&& \\
@@ -26,8 +30,6 @@
 
 \msccaption{Table 3.1b: Description of Work Packages}
 
-% Generic template
-\note{%}
 \begin{mscwp}{MX -- MY}{Title}{Lead}
     \mscwppar{Objectives}{%
     }\\
@@ -39,11 +41,10 @@
     \mscwppar{Description of Deliverables}{%
     }\\
 \end{mscwp}
-}
 
 
-\subsubsection{List of major deliverables}
-\note{please include table 3.1b, including the awarding of doctoral degrees, where applicable}
+\subsubsection{Deliverables list}
+\note{please include table 3.1c, including the awarding of doctoral degrees}
 
 \note{%
     Type of deliverable:
@@ -60,7 +61,7 @@
     \item[CI] Classified: classified information as intended in Commission Decision 2001/844/EC
     \end{compactdesc}
 }
-\msccaption{Table 3.1b: Deliverables List}
+\msccaption{Table 3.1c: Deliverables List}
 \begin{msctable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
     \hline
     \colorrow
@@ -93,9 +94,9 @@
     \hline
 \end{msctable}
 
-\subsubsection{List of major milestones}
+\subsubsection{Milestones list}
 
-\msccaption{Table 3.1c: Milestones List}
+\msccaption{Table 3.1d: Milestones List}
 
 \begin{msctable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{35mm}|}
     \hline
@@ -109,9 +110,27 @@
     \hline
 \end{msctable}
 
-\subsubsection{Fellow's individual projects, including secondment plan}
+\subsubsection{Recruitment table}
 
-\msccaption{Table 3.1d: Individual Research Projects}
+\msccaption{Table 3.1e: Recruitment Table per Beneficiary}
+\begin{msctable}{|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|}
+    \colorrow
+    \hline
+    \textbf{Researcher No.} &
+    \textbf{Recruiting Participant (short name)} &
+    \textbf{PhD awarding entities} &
+    \textbf{Planned Start Month 0--45} &
+    \textbf{Duration (months) 3--36} \\
+    \hline
+    &&&& \\
+    \hline
+    Total & & & & XXX \\
+    \hline
+\end{msctable}
+
+\subsubsection{Individual projects, including secondment plan}
+
+\msccaption{Table 3.1f: Individual Research Projects}
 
 \note{%
 \begin{mscrp}
@@ -128,15 +147,7 @@
 \end{mscrp}
 }
 
-
-\subsubsection{Network organisation}
-\note{including financial management strategy, strategy for dealing with
-  scientific misconduct}
-
-
-\subsubsection{Risk management}
-\note{at consortium level (including table 3.2a)}
-
+\subsubsection{Implementation risks}
 \msccaption{Table 3.1e: Implementation Risks}
 \begin{msctable}{|>{\ra}p{60mm}|>{\ra}p{15mm}|>{\ra}p{90mm}|}
     \hline
@@ -147,38 +158,34 @@
     \hline
 \end{msctable}
 
-\subsubsection{Intellectual Property Rights (IPR)}
+\subsubsection{Supervisory board}
+\note{including gender aspects in the decision making of the board}
 
+\subsubsection{Recruitment strategy}
+\note{including gender aspects in the selection process}
 
-\subsubsection{Gender aspects}
-\label{sec:gender}
-\note{both at the level of recruitment and that of decision-making within the action}
+% For DN-JD, joint admission, selection, supervision, monitoring and assessment procedures (if not applicable, please remove).
 
-
-\subsubsection{Environmental aspects in light of the MSCA Green Charter}
-
+\note{\textbf{Recruitment}
+Employers and/or funders should establish recruitment procedures which are open, efficient, transparent, supportive and internationally comparable, as well as tailored to the type of positions advertised. Advertisements should give a broad description of knowledge and competencies required, and should not be so specialised as to discourage suitable applicants. Employers should include a description of the working conditions and entitlements, including career development prospects. Moreover, the time allowed between the advertisement of the vacancy or the call for applications and the deadline for reply should be realistic.\\
+\textbf{Selection}
+Selection committees should bring together diverse expertise and competences and should have an adequate gender balance and, where appropriate and feasible, include members from different sectors
+(academic and non-academic) and disciplines, including from other countries and with relevant experience to assess the candidate. Whenever possible, a wide range of selection practices should be used, such as external expert assessment and face-to-face interviews. Members of selection panels should be adequately trained.}
 
 \subsection{Quality, capacity and role of each participant, including hosting arrangements and extent to which the consortium as a whole brings together the necessary expertise}
 
-\subsubsection{Appropriateness of the infrastructure and capacity of each participating
-  organisation}
-\note{Explain the appropriateness of the infrastructure of each participating
-  organisation, as outlined in Section 4 (Participating Organisations), in
-  light of the tasks allocated to them in the action}
+\subsubsection{Appropriateness of the infrastructure and capacity of each participating organisation}
+\note{as outlined in Section 6 (Participating Organisations), in light of the tasks allocated to them in the action}
 
-
-\subsubsection{Consortium composition and exploitation of participating
-  organisations' complementarities}
-\note{explain the compatibility and coherence between the tasks attributed to each beneficiary/partner organisation in the action, including in light of their experience}
-\label{sec:composition}
-
+\subsubsection{Consortium composition and exploitation of participating organisations' complementarities}
+\note{explain the compatibility and coherence between the tasks attributed to each beneficiary/associated partner in the action, including in light of their experience; Show how this includes expertise in social sciences and humanities, open science practices, and gender aspects of R\&I, as appropriate.}
 
 \subsubsection{Commitment of beneficiaries and associated partners to the programme}
-\note{for partner organisations, please see also sections 5 and 7) i) Funding of non-associated third countries (if applicable): Only entities from EU Member States, from Horizon 2020 Associated Countries or from countries listed in General Annex A to the Work Programme are automatically eligible for EU funding. If one or more of the beneficiaries requesting EU funding is based in a country that is not automatically eligible for such funding, the application shall explain in terms of the objectives of the action why such funding would be essential. Only in exceptional cases will these organisations receive EU funding.49 The same applies for international organisations other than IEIO.  ii) Partner organisations: The role of partner organisations and their active contribution to the research and training activities should be described. A letter of commitment shall also be provided in section 7 and must follow the template (included within the PDF file, but outside the page limit)}
+\note{(for associated partners, please see also sections 6 and 7). The role of associated partners and their active contribution to the research and training activities should be described. A letter of commitment shall also be provided in section 7 and must follow the template (included within the PDF file, but outside the page limit).}
 
-
-\subsubsection{Funding of non-associated third countries}
-
+\subsubsection{Funding of non-associated third countries (if applicable)}
+\note{Only entities from EU Member States, from Horizon Europe Associated Countries or from countries listed in the HE Programme guide are automatically eligible for EU funding. If one or more of the beneficiaries requesting EU funding is based in a country that is not automatically eligible for such funding, the application shall explain in terms of the objectives of the action why such funding would be essential. Only
+in exceptional cases will these organisations receive EU funding. The same applies for international organisations other than IERO.}
 
 
 %%% Local Variables:
