Update for new network &c

--- a/PartB2.tex
+++ b/PartB2.tex
@@ -18,9 +18,8 @@
 \tableofcontents
 
 % Part B2 sections
-% \include{eid} No longer required
+\include{network}
 \include{organisations}
-% \include{ethics} No longer required
 \include{letters}
 
 \mscpage{END PAGE}
