--- a/master.tex
+++ b/master.tex
@@ -20,9 +20,8 @@
 \include{quality}
 
 % Part B2 sections
-% \include{eid} No longer required
+\include{network}
 \include{organisations}
-% \include{ethics} No longer required
 \include{letters}
 
 \mscpage{END PAGE}
